# react-native-gpui

./: .gitignore  AGENTS.md  DELTA-HANDOFF.md  README.md  hybrid-plan.md  package.json  react-native-gpui.md  run-hermes-app.sh
cpp/: CMakeLists.txt  README.md  gpui_platform.cpp  gpui_platform.h
plans/: HANDOFF.md  off-thread-pseudo-routing.md  off-thread-reanimated.md  presentation-pacing.md  production-ready.md  single-process-hermes.md  tamagui-pseudo-hook.md
rust/: Cargo.toml  build.rs
rust/hermes_shim/: hermes_shim.cpp  hermes_shim.h  shim_selftest.cpp
rust/src/: anim_overlay.rs  anim_overlay_tween.rs  anim_trace.rs  audio.rs  ax.rs  background_window.rs  bridge.rs  capture_png.rs  debug_control.rs  dock.rs  dump.rs  events.rs  frame_clock.rs  frame_trace.rs  hermes.rs  hermes_preamble.js  hit_passthrough.rs  icons.rs  inspector.rs  lib.rs  liquid_glass.rs  main.rs  native_menu.rs  pseudo_style.rs  renderer.rs  selection.rs  service.rs  style.rs
rust/src/elements/: div.rs  image.rs  input.rs  mod.rs  native_control.rs  native_scroll.rs  svg.rs  system.rs  terminal.rs  text.rs  webview.rs
rust/src/gestures/: mod.rs
ts/: .gitignore  LICENSE  README.md  THIRD-PARTY-LICENSES  package.json  tsconfig.json
ts/cli/: bin.ts  host.ts  hotReload.ts  selectors.ts  watchReload.ts
ts/cli/commands/: do.ts  flow.ts  get.ts  shot.ts  trace.ts
ts/examples/: anim-overlay-conformance.tsx  animation-conformance.tsx  card-corner-shadow-conformance.tsx  context-menu-conformance.tsx  delta-conformance.tsx  describe-fixture.tsx  display-none-conformance.tsx  drive-fixture.tsx  fetch-smoke.tsx  gpui-transition-conformance.tsx  hermes-smoke.tsx  input-conformance.tsx  input-runtime-conformance.tsx  input-visual-conformance.tsx  inspector-devtools.tsx  kitchen-sink.tsx  legend-list-100k.tsx  list-group-conformance.tsx  measure-conformance.tsx  native-controls.tsx  native-layout-animation-conformance.tsx  native-layout-conformance.tsx  native-scroll-react-stall-conformance.tsx  number-of-lines-conformance.tsx  offthread-stall-conformance.tsx  opacity-probe.tsx  opacity-ramp.tsx  portal-conformance.tsx  presentation-pacing-conformance.tsx  pseudo-driver-conformance.tsx  raf-pacing-conformance.tsx  reanimated-conformance.tsx  reanimated-scroll-conformance.tsx  rounded-overflow-conformance.tsx  scroll-performance-conformance.tsx  smoke-probe.tsx  superconductor.tsx  text-baseline-conformance.tsx  trace-fixture.tsx  transform-probe.tsx  (+5 more)
ts/scripts/: anim-overlay-conformance.mjs  animated-driver-unit.mjs  animation-frame-diff.mjs  appearance-conformance.ts  appearance-serialize-unit.tsx  build-native.mjs  build-ui-runtime.mjs  bundle-hermes.mjs  card-corner-shadow-conformance.mjs  check-opacity-conformance.mjs  check-opacity-ramp-conformance.mjs  check-transform-conformance.mjs  conformance-utils.mjs  context-menu-conformance.mjs  describe-conformance.mjs  diagnostics-conformance.mjs  dialog-reanimated-conformance.mjs  display-none-conformance.ts  drive-conformance.mjs  file-picker-conformance.ts  gpui-transition-conformance.mjs  hot-reload-cli-conformance.mjs  hot-reload-conformance.mjs  hot-update-alias-plugin.mjs  input-conformance-driver.mjs  input-latency-probe.ts  input-perf.ts  input-runtime-conformance.ts  input-visual-conformance.mjs  inspector-conformance.mjs  keyboard-navigation-unit.mjs  legend-list-100k-conformance.mjs  list-group-conformance-driver.mjs  measure-hermes-startup.mjs  native-package-exports-plugin.mjs  native-scroll-react-stall-conformance.mjs  offthread-stall-conformance.mjs  perf-contention.mjs  pixel-diff.mjs  pixel-sample.mjs  (+30 more)
ts/src/: Animated.ts  Dimensions.ts  StyleSheet.ts  apis.ts  colors.ts  commands.ts  components.tsx  demo-create-root.tsx  demo.tsx  gestures.ts  hotModules.ts  index.ts  keyboard.tsx  native-menu.tsx  platform-driver.ts  portal.tsx  raf.ts  react-refresh.d.ts  reconciler.ts  refresh.ts  render.ts  runtime.ts  style.ts  surfaces.tsx  types.ts  wire-delta.ts
ts/src/reanimated/: colors-processor-shim.ts  reanimated-host.ts  rngpui-reanimated-prebuilt.d.ts  seam.ts  ui-entry.ts  worklet-channel.ts  worklet-runtime.ts  worklets.ts
