[package]
name = "react-native-gpui"
version = "0.1.13"
edition = "2024"

# The renderer service: reads a JSON element tree on stdin, renders it with GPUI,
# and emits events (resize / press / changeText / layout) back on stdout. This is
# the single native artifact the npm package ships and drives.
[[bin]]
name = "rngpui-service"
path = "src/service.rs"

[dependencies]
# runtime_shaders compiles Metal shaders at runtime instead of build time,
# avoiding the separately-downloadable Metal Toolchain component (Xcode 26+).
gpui = { version = "0.2.2", features = ["runtime_shaders"] }
# real text input/textarea/selection — gpui-component's published crate targets gpui 0.2.2
gpui-component = "0.5"
# native WebView content. lb-wry is Longbridge's wry fork that composites correctly
# as a child of gpui's Metal view (stock wry doesn't).
wry = { version = "0.53.3", package = "lb-wry", features = ["transparent"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20"
anyhow = "1.0"
base64 = "0.22"
libghostty-vt = { git = "https://github.com/Uzaaft/libghostty-rs", rev = "dfac6f3e8e7ff1567a7dead6639ef36c42e4f15a" }
# sync-send / async-recv channel: the stdin reader thread hands parsed trees to a
# foreground gpui task that applies them and calls cx.notify() (event-driven render).
flume = "0.11"
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
