[package]
name = "react-native-gpui"
version = "0.1.20"
edition = "2024"

# the renderer service: hosts Hermes on a JS thread, renders committed React trees
# with GPUI, and posts native events back into JS. this is the single native artifact
# the npm package ships and drives.
[[bin]]
name = "rngpui-service"
path = "src/service.rs"

[dependencies]
# runtime_shaders compiles Metal shaders at runtime instead of build time,
# avoiding the separately-downloadable Metal Toolchain component (Xcode 26+).
gpui = { version = "0.2.2", features = ["runtime_shaders"] }
# real text input/textarea/selection — gpui-component's published crate targets gpui 0.2.2
gpui-component = "0.5"
# native WebView content. lb-wry is Longbridge's wry fork that composites correctly
# as a child of gpui's Metal view (stock wry doesn't).
wry = { version = "0.53.3", package = "lb-wry", features = ["transparent"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20"
anyhow = "1.0"
base64 = "0.22"
libghostty-vt = { git = "https://github.com/Uzaaft/libghostty-rs", rev = "dfac6f3e8e7ff1567a7dead6639ef36c42e4f15a" }
# sync-send / async-recv channel: Hermes and debug-control threads hand parsed trees
# and commands to a foreground gpui task that applies them and calls cx.notify().
flume = "0.11"
raw-window-handle = "0.6"
# host environment for the embedded JS: HTTP (fetch) + WebSocket (live agentbus data).
ureq = { version = "2", features = ["json"] }
tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2"

[build-dependencies]
# compiles the Hermes JSI C ABI shim (hermes_shim.cpp + jsi.cpp) — see build.rs.
cc = "1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
core-foundation = "0.10"
core-graphics = "0.24"
objc = "0.2"

# Patched gpui 0.2.2: makes `DispatchEventResult` `pub` (upstream `pub(crate)`) so the
# `realtap` debug command can call `Window::dispatch_event` — the real OS-click event
# path (hitbox hit-test + listeners) — to test on-screen clickability. Rust 2024's
# `unnameable_types` otherwise forbids an external crate from producing the private
# return type, even to discard it. The vendored copy is byte-identical to crates.io
# gpui-0.2.2 except that one visibility change. The patch applies to gpui-component too
# (it depends on the same gpui), so the whole graph shares one gpui.
[patch.crates-io]
gpui = { path = "vendor/gpui-0.2.2-patched" }
