[package]
name = "react-native-gpui"
version = "0.1.36"
edition = "2024"

# the renderer service: hosts Hermes on a JS thread, renders committed React trees
# with GPUI, and posts native events back into JS. this is the single native artifact
# the npm package ships and drives.
[[bin]]
name = "rngpui-service"
path = "src/service.rs"

[dependencies]
# runtime_shaders compiles Metal shaders at runtime instead of build time,
# avoiding the separately-downloadable Metal Toolchain component (Xcode 26+).
gpui = { version = "0.2.2", features = ["runtime_shaders"] }
# real text input/textarea/selection — gpui-component's published crate targets gpui 0.2.2
gpui-component = "0.5"
# native WebView content. lb-wry is Longbridge's wry fork that composites correctly
# as a child of gpui's Metal view (stock wry doesn't).
wry = { version = "0.53.3", package = "lb-wry", features = ["transparent"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20"
anyhow = "1.0"
base64 = "0.22"
libghostty-vt = { git = "https://github.com/Uzaaft/libghostty-rs", rev = "dfac6f3e8e7ff1567a7dead6639ef36c42e4f15a" }
# sync-send / async-recv channel: Hermes and debug-control threads hand parsed trees
# and commands to a foreground gpui task that applies them and calls cx.notify().
flume = "0.11"
raw-window-handle = "0.6"
# microphone capture for the JS VoiceRecorder API (default input device, native config).
cpal = "0.15"
# host environment for the embedded JS: HTTP (fetch) + WebSocket (live agentbus data).
ureq = { version = "2", features = ["json"] }
tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2"
# dup2 for redirecting stdout/stderr to a log file when launched as the bundle's
# CFBundleExecutable (no shell wrapper to do the redirect). already in the tree.
libc = "0.2"

[build-dependencies]
# compiles the Hermes JSI C ABI shim (hermes_shim.cpp + jsi.cpp) — see build.rs.
cc = "1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
core-foundation = "0.10"
core-graphics = "0.24"
objc = "0.2"

# Patched gpui 0.2.2. The patch applies to gpui-component too (it depends on the same
# gpui), so the whole graph shares one gpui. Divergences from crates.io gpui-0.2.2:
#
# 1. `DispatchEventResult` is `pub` (upstream `pub(crate)`) so the `realtap` debug
#    command can call `Window::dispatch_event` — the real OS-click event path (hitbox
#    hit-test + listeners) — to test on-screen clickability. Rust 2024's
#    `unnameable_types` otherwise forbids an external crate from producing the private
#    return type, even to discard it.
#
# 2. Retained-layout fast path (src/taffy.rs, src/window.rs). gpui is strictly immediate-
#    mode: it rebuilds AND re-solves the whole taffy flexbox tree every draw, so an idle
#    "paint-only" frame (a hover bg flip, an opacity pulse) pays the full O(total-nodes)
#    constraint solve (~7ms at 1300 nodes) even though no box moved. The host calls the new
#    `Window::prepare_layout_frame(reuse_paint_only)` at the top of its `Render::render`
#    when it knows a frame changed only paint-only style keys; the patched
#    `TaffyLayoutEngine` then carries the previous full-layout frame's solved geometry over,
#    rebuilds the tree + runs each node's (cheap, cached) text measure so gpui's text/input
#    elements still populate their per-frame state, and SKIPS the flexbox solve — copying
#    every node's bounds positionally from the prior frame. A node-count mismatch self-heals
#    to a full relayout next draw. Cuts the per-frame draw cost ~10ms→~4ms on hover/pulse
#    frames at 400-session scale. `RNGPUI_DISABLE_RETAINED_LAYOUT` forces the stock path;
#    `RNGPUI_DRAW_PROBE` prints the per-draw wall-clock + reuse flag.
#
# 3. `Window::with_element_opacity` is `pub` (upstream `pub(crate)`). The host's custom
#    div element (src/elements/div.rs) paints via `Style::paint` directly instead of
#    gpui's stock `Div`, which is the only thing that pushes `style.opacity` onto gpui's
#    element-opacity stack (paint_quad/paint_shadows/paint_path multiply alpha by it).
#    Without a public entry point the host could not render div opacity AT ALL, so every
#    opacity spring / enterStyle / exitStyle / AnimatePresence (all dialog & sheet fades)
#    painted at full opacity — only `transform` animated, and drop shadows never faded.
#    `ts/scripts/check-opacity-conformance.mjs` is the pixel regression guard.
#
# 4. CSS-correct box-shadow occlusion (src/scene.rs `Shadow.occluder_bounds`,
#    src/window.rs `paint_shadows`, all three backend shaders). Upstream paints the
#    blurred shadow across the WHOLE rounded rect, including underneath the casting
#    element; CSS clips outer shadows to outside the border box. Invisible while the
#    element is opaque, but any opacity fade (dialog exits, AnimatePresence) lets the
#    shadow bleed through the now-translucent background — the "shadow underneath"
#    artifact. The shadow fragment shaders now cut out the element's own rounded rect
#    via `quad_sdf` on the new `occluder_bounds` field.
[patch.crates-io]
gpui = { path = "vendor/gpui-0.2.2-patched" }
# Patched gpui-component 0.5.1 (vendored alongside gpui, same precedent). Divergences
# from crates.io gpui-component-0.5.1, all to make <TextInput>/<TextArea> render at
# native-macOS fidelity (the upstream defaults look non-native):
#
# 1. Caret width (src/input/blink_cursor.rs `CURSOR_WIDTH`): 1.5px → 1.0px. NSTextView's
#    insertion point is a 1px-logical bar (2 device px @2x); 1.5px reads as a fat slab.
# 2. Blink cadence (src/input/blink_cursor.rs `INTERVAL`/`PAUSE_DELAY`): 500ms toggle /
#    300ms pause → 567ms toggle / 500ms pause, matching NSTextView's
#    NSTextInsertionPointBlinkPeriodOn/Off (~560ms) and its type-pause-then-resume.
# 3. Single-line vertical centering (src/input/input.rs render): the wrapper combined
#    `.size_full()` + a fixed `.input_h()` + `.items_center()`, which fought our outer
#    field box's height — text/placeholder sat top-aligned when the field was taller than
#    h_8. Dropped the conflicting fixed height for single-line so `items_center` centers
#    the editor within the real field box. See that file's comments.
# The patch also applies to nothing else (gpui-component is only used for Input here).
gpui-component = { path = "vendor/gpui-component-0.5.1-patched" }
gpui-component-macros = { path = "vendor/gpui-component-macros-0.5.1-patched" }
